[package]
name = "world_server"
version = "0.1.0"
authors = ["lcdr"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lcdr/world_server/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
minreq = { version = "2.1.1", features = ["https"] }
libsqlite3-sys = { version = "0.20.1", features = ["bundled"] }
diesel = { version = "1.4.6", features = ["sqlite"] }
lu_packets = { git = "https://github.com/lcdr/lu_packets", rev = "34da323dd9acd829ff00f9c6c4549ce5ad1dceb3" }
lu_packets_derive = { git = "https://github.com/lcdr/lu_packets", rev = "34da323dd9acd829ff00f9c6c4549ce5ad1dceb3" }
base_server = { git = "https://github.com/lcdr/base_server", rev = "019fcf5dc82f0edf5e3055f44d9c29875b4a7200", features=[], default-features=false }
rusqlite = "0.24.2"
