[package]
name = "world_server"
version = "0.1.0"
authors = ["lcdr"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lcdr/world_server/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
minreq = { version = "2.1.1", features = ["https"] }
libsqlite3-sys = { version = "0.20.1", features = ["bundled"] }
diesel = { version = "1.4.6", features = ["sqlite"] }
lu_packets = { git = "https://github.com/lcdr/lu_packets", rev = "58e22958eca62e0d2d2d98c5de3052900fff1884" }
lu_packets_derive = { git = "https://github.com/lcdr/lu_packets", rev = "58e22958eca62e0d2d2d98c5de3052900fff1884" }
base_server = { git = "https://github.com/lcdr/base_server", rev = "3bb19be48bb39aa9c3793b423cff29963ee14708", features=[], default-features=false }
rusqlite = "0.24.2"
